<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/colorAccent">

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/loginTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_app_title"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:padding="5dp"
            android:fontFamily="@font/raleway_bold"
            android:textSize="30sp"
            />

        <!--user id and password edit text-->
        <EditText
            android:id="@+id/loginUserIdTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:hint="@string/user_id_hint"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textColor="@color/colorPrimary"
            android:backgroundTint="@color/colorWhite"
            android:textSize="18sp"
            />

        <EditText
            android:id="@+id/loginUserPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/password_hint"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textColor="@color/colorPrimary"
            android:backgroundTint="@color/colorWhite"
            android:textSize="18sp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forgetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password_text"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_condensed_regular"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="50dp"
                android:textColor="@color/colorPrimaryDark" />

            <!--login buttons-->
            <Button
                android:id="@+id/loginButton"
                android:layout_width="140dp"
                android:layout_height="53dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:background="@color/colorPrimary"
                android:layout_marginTop="25dp"
                android:text="@string/login_button_text"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:fontFamily="@font/roboto_condensed_regular"
                android:textColor="@color/colorAccent"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_text"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="10dp"
            android:padding="5dp"/>


        <!--social media login buttons-->
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/loginFacebookButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fb_logo"
                android:background="@color/colorAccent"
                android:padding="10dp"/>

            <ImageButton
                android:id="@+id/loginGmailButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gmail_logo"
                android:background="@color/colorAccent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <ImageButton
                android:id="@+id/loginInstagramButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/instagram_logo"
                android:background="@color/colorAccent"
                android:padding="10dp"/>
        </LinearLayout>

    </LinearLayout>


</ScrollView>